--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
 /**logo img**/
 .logo {
 
-    background-image: url(/Accessries_files/amazonBlogo.png);
+    background-image: url(./Accessries_files/amazonBlogo.png);
     height: 55px;
     width: 100%;
     background-size: cover;
@@ -276,7 +276,7 @@ ul a {
     align-items: center;
 }
 .logo2{
-    background-image: url(/Accessries_files/amazonBlogo.png);
+    background-image: url(./Accessries_files/amazonBlogo.png);
     height: 60px;
     width: 113px;
     background-size: cover;
